Added URI pare functions, added path package config item, changed startup sequence and config options, changed modules/1.0 tests to the define definition currently under discussion at ComonJS.

--- a/commonjs/tests/modules/1.0/absolute/program.html
+++ b/commonjs/tests/modules/1.0/absolute/program.html
@@ -2,16 +2,20 @@
 <html>
 <head>
     <title>Program Runner</title>
-    <script src="../../../../../apprequire.js"></script>
     <script>
-        require({
-            baseUrl: './',
+        require = {
+			location: './',
+			directories: {
+				lib: ''
+			},
+			main: 'program',
             paths: {
-                system: '../system',
-                test: '../test'
+                system: '..',
+                test: '..'
             }
-        }, ['program']);
+		};
     </script>
+    <script src="../../../../../apprequire.js"></script>
 </head>
 <body>
     <h1>Program Runner</h1>
