--- a/tests/commonjs/modules/1.0/absolute/program.html
+++ b/tests/commonjs/modules/1.0/absolute/program.html
@@ -4,7 +4,7 @@
     <title>Program Runner</title>
     <script>
 		require = {
-			location: './',
+			location: '.',
 			directories: {
 				lib: ''
 			},
