Solution for main module loading and major overhaul of code. Next version will have ensure callback function and (almost) all function/class documentation in code.

--- a/tests/apprequire/all.html
+++ b/tests/apprequire/all.html
@@ -6,7 +6,9 @@
 <body>
     <h1>Links for Every Test</h1>
     <ul>
-        <li><a href="standard">Basic Apprequire load with modules, packages and paths</a></li>
+        <li><a href="standard/index.html">Basic Apprequire load via data-main (with modules, packages and paths)</a></li>
+        <li><a href="inlinecfg/index.html">Basic Apprequire load via inline config (with modules, packages and paths)</a></li>
+        <li><a href="inlinecfgmodule/index.html">Basic Apprequire load via inline package config and main module file (with modules, packages and paths)</a></li>
     </ul>
 </body>
 </html>
