In between commit. Added more cyclic tests in the code and added main property on require

--- a/tests/index.html
+++ b/tests/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li><a href="apprequire/all.html">Specific Apprequire tests</a></li>
         <li><a href="commonjs/modules/1.0/all.html">CommonJS Module/1.0 tests</a></li>
-        <li><a href="commonjs/packages/all.html">CommonJS Packages tests</a></li>
+        <li><a href="commonjs/packages/1.0/all.html">CommonJS Packages tests</a></li>
     </ul>
 </body>
 </html>
