Implementation of module and package state for easier internal administration. Addition of new Package test (package definition file missing test)

--- a/tests/commonjs/packages/1.0/all.html
+++ b/tests/commonjs/packages/1.0/all.html
@@ -7,6 +7,7 @@
     <h1>Links for Every Test</h1>
     <ul>
         <li><a href="basic/program.html">Basic package test</a></li>
+        <li><a href="mainload/program.html">Package main load missing test</a></li>
     </ul>
 </body>
 </html>
