--- a/tests/index.html
+++ b/tests/index.html
@@ -7,8 +7,8 @@
     <h1>Links for Every Test</h1>
     <ul>
         <li><a href="apprequire/all.html">Specific Apprequire tests</a></li>
-        <li><a href="commonjs/modules/1.0/all.html">CommonJS Module/1.0 tests</a></li>
-        <li><a href="commonjs/packages/1.0/all.html">CommonJS Packages tests</a></li>
+        <li><a href="commonjs-modules-10-tests.html">CommonJS Module/1.0 tests</a></li>
+        <li><a href="commonjs-packages-10-tests.html">CommonJS Packages tests</a></li>
     </ul>
 </body>
 </html>
