Split dependency resolving and exports creation. Exports creation is now done at the moment of require instead of when loading. Also added lots of inline documentation

--- a/tests/apprequire/inlinecfg/index.html
+++ b/tests/apprequire/inlinecfg/index.html
@@ -45,6 +45,9 @@
 			deps: ['./test/run'],
 			mainFunction: function (require, exports, module) {
 				exports.test = 'Main module for root';
+		
+				// and run the test
+				require('./test/run');
 			}
 
 		};
