--- a/tests/index.html
+++ b/tests/index.html
@@ -9,6 +9,7 @@
         <li><a href="apprequire/all.html">Specific Apprequire tests</a></li>
         <li><a href="commonjs-modules-10-tests.html">CommonJS Module/1.0 tests</a></li>
         <li><a href="commonjs-packages-10-tests.html">CommonJS Packages tests</a></li>
+        <li><a href="general/extjs/index.html">CommonJS ExtJS Packages test</a></li>
     </ul>
 </body>
 </html>
