Implemented CommonJS ModuleLoader draft + added test space for it. Changed deferred call to function to a timeout delayed execution to prevent race conditions when callback function calls ensure again...

--- a/tests/index.html
+++ b/tests/index.html
@@ -8,6 +8,7 @@
     <ul>
         <li><a href="apprequire/all.html">Specific Apprequire tests</a></li>
         <li><a href="commonjs-modules-10-tests.html">CommonJS Module/1.0 tests</a></li>
+        <li><a href="commonjs-modules-loaderplugin-tests.html">CommonJS Module/LoaderPlugin tests</a></li>
         <li><a href="commonjs-packages-10-tests.html">CommonJS Packages tests</a></li>
         <li><a href="general/extjs/index.html">CommonJS ExtJS Packages test</a></li>
     </ul>
