--- a/tests/commonjs-packages-10-tests.html
+++ b/tests/commonjs-packages-10-tests.html
@@ -25,7 +25,7 @@
 	</head>
 	<body>
 		<h1>AppRequire CommonJS/Modules/1.0 Unit Testing</h1>
-		<p><a href="http://localhost/webapps/examples/require/tests/">Back to other tests...</a></p>
+		<p><a href="./">Back to other tests...</a></p>
 		<div></div>
 		<script>
 			// Based on code from Kevin H. Smith, https://github.com/khs4473)
