--- a/tests/general/basic/index.html
+++ b/tests/general/basic/index.html
@@ -2,40 +2,114 @@
 <html>
 <head>
     <title>Program Runner</title>
+	<style>
+		body {
+			font: 13px Arial;
+		}
+		
+		.pass {
+			color: green;
+		}
+		
+		.fail, .error {
+			color: red;
+		}
+	</style>
     <script src="../../../apprequire-debug.js"></script>
-    <script>
-		var test = decodeURIComponent((location.search || "?").substring(1));
-		
-		function printResults(txt, style) {
-			var d = document.createElement("div");
-			setTextContent(d, txt);
-			d.className = style;
-			document.body.appendChild(d);
-		}
-		
-		function setTextContent(e, txt) {
-			if (typeof e.innerText === "string") e.innerText = txt;
-			else e.textContent = txt;
-		}
-		
-		// standard module testing \\		
-		// add module in main environment
-		module.api.cms.memoize('http://sander.tolsma.net/root/', 'dummy4', ['dep1', 'dep2'], function(){}, 'http://sander.tolsma.net/root/dummy4');
-		// add main module in main environment
-		module.api.cms.memoize('http://sander.tolsma.net/root/', '', ['dep1', 'dep2'], function(){}, 'http://sander.tolsma.net/root/mainmodule');
-		
-		// system root testing \\
-		// add module in package under test mapping
-		module.api.cms.memoize('http://sander.tolsma.net/testroot/', 'dummy3', ['dep1', 'dep2'], function(){}, 'http://sander.tolsma.net/testroot/dummy3');
-		// add main module for test package
-		module.api.cms.memoize('http://sander.tolsma.net/testroot/', '', ['dep1', 'dep2'], function(){}, 'http://sander.tolsma.net/testroot/mainmodule');
-
-		// add test mapping to another mapping same root
-		module.api.cms.memoize('http://sander.tolsma.net/testroot/', 'dummy3', ['dep3', 'dep4'], function(){}, 'http://sander.tolsma.net/testroot/dummy3');
-	
-    </script>
 </head>
-<body>
-    <h1>Program Runner</h1>
-</body>
+	<body>
+    	<h1>Program Runner</h1>
+	</body>
 </html>
+<script>
+	var test = decodeURIComponent((location.search || "?").substring(1));
+	
+	function printResults(txt, style) {
+		var d = document.createElement("div");
+		setTextContent(d, txt);
+		d.className = style;
+		document.body.appendChild(d);
+	}
+	
+	function setTextContent(e, txt) {
+		if (typeof e.innerText === "string") e.innerText = txt;
+		else e.textContent = txt;
+	}
+	
+	// standard module environment testing \\
+			
+	// add main module in main environment
+	module.api.cms.memoize('', ['dep1', 'dep2'], function(require, exports, module){
+		exports.test = 'Main Module';
+		exports.dummy4 = require('dummy4');
+		exports.dummy3 = require('./dummy3');
+	});
+	// add module in main environment
+	module.api.cms.memoize('dummy4', ['dep1', 'dep2'], function(require, exports, module){
+		exports.test = 'Dummy4';
+		exports.dummy3 = require('../dummy3');		
+	});
+	// add module in main environment
+	module.api.cms.memoize('dummy3', ['dep1', 'dep2'], function(require, exports, module){
+		exports.test = 'Dummy3';
+	});
+	
+	/*******************************************************************************\
+	*	First test: add module with same root = exception!!							*
+	\*******************************************************************************/
+	if (module.api.cms.memoize('dummy3', ['dep3', 'dep4'], function(require, exports, module){
+		exports.test = 'Dummy3 tweede keer';
+	})) {
+		printResults('2nd time memoizing same module id works, as not expected..', 'fail')
+	} else {
+		printResults('2nd time memoizing same module id doesnt work, as expected..', 'pass')
+	};
+
+	/*******************************************************************************\
+	*	2nd test: is exports correct after require									*
+	\*******************************************************************************/
+	if (module.api.cms.require('').test == 'Main Module') {
+		printResults('Requireing main module gives Main Module in exports..', 'pass')
+	} else {
+		printResults('Requireing main module doesnt gives Main Module in exports..', 'fail')
+	};
+	if (module.api.cms.require('dummy4').test == 'Dummy4') {
+		printResults('Requireing dummy4 gives Dummy4 in exports..', 'pass')
+	} else {
+		printResults('Requireing dummy4 doesnt gives Dummy4 in exports..', 'fail')
+	};
+	if (module.api.cms.require('dummy3').test == 'Dummy3') {
+		printResults('Requireing dummy3 gives Dummy3 in exports..', 'pass')
+	} else {
+		printResults('Requireing dummy3 doesnt gives Dummy3 in exports..', 'fail')
+	};
+		
+	/*******************************************************************************\
+	*	3rd test: is getMainHook working											*
+	\*******************************************************************************/
+	if (module.api.cms.getMainHook('').test == 'Main Module') {
+		printResults('getMainHook gives Main Module in exports..', 'pass')
+	} else {
+		printResults('getMainHook doesnt gives Main Module in exports..', 'fail')
+	};
+	
+	/*******************************************************************************\
+	*	4th test: is require in module working										*
+	\*******************************************************************************/
+	if (module.api.cms.require('').dummy4.test == 'Dummy4') {
+		printResults('Is require in module working..', 'pass')
+	} else {
+		printResults('Require in module is not working..', 'fail')
+	};
+	if (module.api.cms.require('').dummy3.test == 'Dummy3') {
+		printResults('Is relative require with one dot in module working..', 'pass')
+	} else {
+		printResults('Relative Require with one dot in module is not working..', 'fail')
+	};
+	if (module.api.cms.require('dummy4').dummy3.test == 'Dummy3') {
+		printResults('Is relative require with two dots in module working..', 'pass')
+	} else {
+		printResults('Relative Require with two dots in module is not working..', 'fail')
+	};
+
+</script>
