First basic working version (console.log still in code) with generic loader working and the implementation of all the Modules 1.0 tests (and they all pass in FF3.6!!!).

--- a/tests/commonjs-modules-10-tests.html
+++ b/tests/commonjs-modules-10-tests.html
@@ -106,7 +106,7 @@
 				
 				if (typeof test === "string") {
 					writeHeader(test);
-					test = encodeURIComponent(testFolder + test);
+					test = encodeURIComponent(testFolder + test + '/');
 					
 					if (useWorkers)	{
 						worker = new Worker("runner.js?" + test);
