--- a/tests/general/basic/index.html
+++ b/tests/general/basic/index.html
@@ -15,7 +15,10 @@
 			color: red;
 		}
 	</style>
-    <script src="../../../apprequire-debug.js"></script>
+    <script>
+		test = '<script data-context="{&#34;main&#34;: &#34;program&#34;, &#34;timeout&#34;: 2000}" src="../../../apprequire-debug.js"></' + 'script>';
+		document.write(test);
+	</script>
 </head>
 	<body>
     	<h1>Program Runner</h1>
@@ -38,69 +41,5 @@
 	
 	// standard module environment testing \\
 			
-	// add main module in main environment
-	require.memoize('', ['dep1', 'dep2'], function(require, exports, module){
-		exports.test = 'Main Module';
-		exports.dummy4 = require('dummy4');
-		exports.dummy3 = require('./dummy3');
-	});
-	// add module in main environment
-	require.memoize('dummy4', ['dep1', 'dep2'], function(require, exports, module){
-		exports.test = 'Dummy4';
-		exports.dummy3 = require('../dummy3');		
-	});
-	// add module in main environment
-	require.memoize('dummy3', ['dep1', 'dep2'], function(require, exports, module){
-		exports.test = 'Dummy3';
-	});
-	
-	/*******************************************************************************\
-	*	First test: add module with same id = fail									*
-	\*******************************************************************************/
-	if (require.memoize('dummy3', ['dep3', 'dep4'], function(require, exports, module){
-		exports.test = 'Dummy3 tweede keer';
-	})) {
-		printResults('2nd time memoizing same module id works, not expected..', 'fail')
-	} else {
-		printResults('2nd time memoizing same module id fails, as expected..', 'pass')
-	};
-
-	/*******************************************************************************\
-	*	2nd test: is exports correct after require									*
-	\*******************************************************************************/
-	if (require('').test == 'Main Module') {
-		printResults('Requireing main module gives Main Module in exports..', 'pass')
-	} else {
-		printResults('Requireing main module doesnt gives Main Module in exports..', 'fail')
-	};
-	if (require('dummy4').test == 'Dummy4') {
-		printResults('Requireing dummy4 gives Dummy4 in exports..', 'pass')
-	} else {
-		printResults('Requireing dummy4 doesnt gives Dummy4 in exports..', 'fail')
-	};
-	if (require('dummy3').test == 'Dummy3') {
-		printResults('Requireing dummy3 gives Dummy3 in exports..', 'pass')
-	} else {
-		printResults('Requireing dummy3 doesnt gives Dummy3 in exports..', 'fail')
-	};
-		
-	/*******************************************************************************\
-	*	3rd test: is require in module working										*
-	\*******************************************************************************/
-	if (require('').dummy4.test == 'Dummy4') {
-		printResults('Is require in module working..', 'pass')
-	} else {
-		printResults('Require in module is not working..', 'fail')
-	};
-	if (require('').dummy3.test == 'Dummy3') {
-		printResults('Is relative require with one dot in module working..', 'pass')
-	} else {
-		printResults('Relative Require with one dot in module is not working..', 'fail')
-	};
-	if (require('dummy4').dummy3.test == 'Dummy3') {
-		printResults('Is relative require with two dots in module working..', 'pass')
-	} else {
-		printResults('Relative Require with two dots in module is not working..', 'fail')
-	};
 
 </script>
