Added splitup bootstrap test and general AppRequire test page

--- a/tests/general/splitup/index.html
+++ b/tests/general/splitup/index.html
@@ -15,7 +15,7 @@
 			color: red;
 		}
 	</style>
-	<script data-context="{&#34;commonjsAPI&#34;: { &#34;systemModules&#34;: [&#34;test&#34;, &#34;system&#34;] }, &#34;main&#34;: &#34;program&#34;, &#34;timeout&#34;: 2000}" src="../../../src/apprequire-bootstrap-ua.js"></script>
+	<script data-context="{&#34;modules&#34;: [&#34;test&#34;, &#34;system&#34;], &#34;main&#34;: &#34;program&#34;, &#34;timeout&#34;: 2000}" src="../../../src/apprequire-bootstrap-ua.js"></script>
 	<script src="../../../src/system.js"></script>
 	<script src="../../../src/basicStore.js"></script>
 	<script src="../../../src/basicModule.js"></script>
