--- a/tests/index.html
+++ b/tests/index.html
@@ -6,8 +6,7 @@
 <body>
     <h1>Links for Every Test</h1>
     <ul>
-        <li><a href="general/basic/index.html">Specific Core Unit tests</a></li>
-        <li><a href="apprequire/all.html">Specific Apprequire tests</a></li>
+        <li><a href="general/index.html">Specific Core tests</a></li>
         <li><a href="commonjs-modules-10-tests.html">CommonJS Module/1.0 tests</a></li>
         <li><a href="commonjs-modules-loaderplugin-tests.html">CommonJS Module/LoaderPlugin tests</a></li>
         <li><a href="commonjs-packages-10-tests.html">CommonJS Packages tests</a></li>
